--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "@php artisan passport:keys"
         ]
     }
 }
