--- a/fpm_custom.conf
+++ b/fpm_custom.conf
@@ -1,3 +1,4 @@
 php_value[memory_limit] = 300M
 php_value[upload_max_filesize] = 300M
 php_value[post_max_size] = 300M
+php_value[max_execution_time] = 3600
